@@ -61,6 +61,9 @@
 /* Define if you have the getpagesize function.  */
 #undef HAVE_GETPAGESIZE
 
+/* Define if you have the glob function.  */
+#undef HAVE_GLOB
+
 /* Define if you have the munmap function.  */
 #undef HAVE_MUNMAP
 
@@ -145,11 +148,11 @@
 /* Define if your locale.h file contains LC_MESSAGES. */
 #undef HAVE_LC_MESSAGES
 
-/* Define to 1 if NLS is requested */
-#undef ENABLE_NLS
-
 /* Define as 1 if you have gettext and don't want to use GNU gettext. */
 #undef HAVE_GETTEXT
+
+/* Define to 1 if NLS is requested */
+#undef ENABLE_NLS
 
 /* Use b modifier when opening binary files? */
 #undef USE_BINARY_FOPEN
