@@ -1,3 +1,8 @@
+2005-02-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* config.in: Regenerate.
+	* configure: Regenerate.
+
 2005-02-17  Zack Weinberg  <zack@codesourcery.com>
 
 	* ldexp.c (assigning_to_dot): New global flag.
